# mlops-sandbox

./: .gitignore  Makefile  cleanup.sh  deploy.sh  docker-compose.yaml  main.py  pyproject.toml
cloudformation/: infrastructure.json
grafana/provisioning/dashboards/: dashboard-provider.yaml  lambda_metrics.json
grafana/provisioning/datasources/: datasources.yaml
src/: train.py
src/data/: emotions_dataset.py
src/lambdas/classify_anomaly/: handler.py  requirements.txt
src/lambdas/classify_level/: handler.py
src/models/: linear_model.py  toy_anomaly_classifier.py  toy_level_classifier.py
src/pipelines/: linear_model.py
src/schemas/: data_point.py
src/train/: anomaly_classifier_pipeline.py  level_classifier_pipeline.py
src/utils/: model_registry.py  plot.py  s3.py
terraform/: api_gateway.tf  cloudwatch.tf  dynamodb.tf  iam.tf  lambda.tf  locals.tf  outputs.tf  providers.tf  variables.tf
tests/load_tests/: config.py  locustfile.py  run_test.sh
