[project]
name = "mlops-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aws-lambda-powertools[all]>=3.24.0",
  "boto3>=1.42.35",
  "dotenv>=0.9.9",
  "loguru>=0.7.3",
  "numpy>=2.4.1",
  "pendulum>=3.1.0",
  "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "ruff>=0.14.13",
  "locust>=2.20.0",
  "faker>=33.6.0",
  "httpx>=0.28.1",
]
infra = []

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
ignore = [
  "ANN001",
  "ANN002",
  "ANN003",
  "ANN201",
  "ANN202",
  "ANN204",
  "ANN205",
  "ANN206",
  "ANN401",
]

[tool.ruff]
line-length = 100
